fix Can't cast error